package mau.donate.objects;

import jakarta.persistence.*;
import mau.donate.objects.enums.StorageStatus;
import org.solarframework.db.spring.DatabaseObject;

import java.text.DecimalFormat;

import static org.solarframework.core.util.StringUtils.StopString;

@Table @Entity
public class Donation_Item extends DatabaseObject.ID_OBJ<Long, Donation_Item> {
    @ManyToOne
    @JoinColumn(referencedColumnName = "ID", name = "DonationID")
    public transient Donation D = null;

    public long DonationID;
    public Long WarehouseID;
    public String ItemName;
    public int Quantity;
    public long CapacityPerQty = 0;
    @Enumerated(EnumType.STRING)
    public StorageStatus Status = StorageStatus.NOT_YET_BROUGHT; // NOT_YET_BROUGHT, IN_STORAGE, DELIVERED;

    public Donation_Item() {}

    public String getPercentage(double MaxCapacity) {
        return new DecimalFormat("#.##").format((CapacityPerQty * Quantity) / MaxCapacity * 100.0);
    }

    public String getItemName() {
        return ItemName;
    }
    public void setItemName(String itemName) {
        ItemName = StopString(itemName, 128);
    }

    public int getQuantity() {
        return Quantity;
    }
    public void setQuantity(int quantity) {
        Quantity = quantity;
    }

    public StorageStatus getStatus() {
        return Status;
    }
    public void setStatus(StorageStatus status) {
        Status = status;
    }


}