package mau.donate.objects;

import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import org.solarframework.db.spring.DatabaseObject;

import java.time.Instant;
import java.time.LocalDateTime;
import java.util.List;

import static org.solarframework.db.spring.DatabaseRegistry.SolarDBManager;

@Entity
@Table
public class Trip extends DatabaseObject.ID_OBJ<Long, Trip> {

    public Long StaffID;
    public Long DonationID;
    public LocalDateTime ScheduleTime;
    public String StartLocation;
    public String EndDestination;

    public Trip() {}
    public Trip(long staffID, long donationID, LocalDateTime scheduleTime, String startLocation, String endDestination) {
        ID = Instant.now().toEpochMilli();
        StaffID = staffID;
        DonationID = donationID;
        ScheduleTime = scheduleTime;
        StartLocation = startLocation;
        EndDestination = endDestination;
        Write();
    }

    public static List<Trip> getByStaff(long staffId) {
        return SolarDBManager.getAllWhere(Trip.class, "StaffID = ?", staffId);
    }

    public static Trip getByDonation(long donationID) {
        return SolarDBManager.getWhere(Trip.class, "DonationID = ?", donationID).orElse(null);
    }

}