package mau.donate.objects.derived;

import mau.donate.objects.Donation_Request;

public class D_Donation_Request extends Donation_Request {

    public Long Upvotes;
    public String Address;
    public String Phone;
    public String Email;
    public String FirstName;
    public String LastName;

}
