package mau.donate.objects.enums;

public enum DonationStatus {

    PENDING, COMPLETED, CANCELLED;

}
