package mau.donate.objects.enums;

public enum StorageStatus {

    NOT_YET_BROUGHT, IN_STORAGE, DELIVERED;

}
