@startuml
top to bottom direction

' =========================
' ENUMS
' =========================
enum Bank {
  MCB
  SBM
  MAUBANK
  PAYPAL
  ABSA_BANK
  HSBC_BANK
  STANDARD_CHARTERED
  BANK_ONE
  AFRASIA_BANK
  SILVER_BANK
  ABC_BANKING
  OTHER
}

enum StorageStatus {
  NOT_YET_BROUGHT
  IN_STORAGE
  DELIVERED
}

enum DonationStatus {
  PENDING
  COMPLETED
  CANCELLED
}

' =========================
' CORE ENTITIES
' =========================
class Account_User {
  Long ID
  String Email
  String Password
  String FirstName
  String LastName
  String AccountProvider
  String Role
  String Address
  String Gender
  String Phone
  byte[] Image
  LocalDate DateOfBirth
  boolean Anonymous
  boolean Enabled
  boolean Verified
  LocalDateTime CreatedAt
  LocalDateTime UpdatedAt

  + isPasswordValid()
  + getAge()
  {static} getById(long)
  {static} getByAuthentication(Principal)
}

class Association {
  Long ID
  String Name
  String Description
  byte[] Image
  LocalDateTime JoinedAt
  LocalDateTime CanceledAt

  {static} getById(long)
}

class Donation {
  Long ID
  long DonorID
  long ReceiverID
  double Rupees
  String Message
  boolean Approved
  boolean Anonymous
  LocalDateTime CreatedAt
  LocalDateTime UpdatedAt

  + getDonor()
  + getReceiver()
  + getItemsAsString()
  {static} getById(long)
}

class D_Donation {
  String Sender_FName
  String Sender_LName
  String Sender_Address
  String Receiver_FName
  String Receiver_LName
  String Receiver_Address

  + getItemsStatus()
  {static} getNotBroughtDonations()
  {static} getStoredDonations()
}

class Donation_Upvote {
  Long UserID
  Long RequestID
  {static} getById(long, long)
}

class Campaign {
  Long ID
  long AssociationID
  String Title
  String Message
  String Hyperlink
  byte[] Image
  LocalDateTime CreatedAt
  LocalDateTime StartAt
  LocalDateTime UpdatedAt

  {static} getById(long)
}

class Donation_Item {
  Long ID
  long DonationID
  Long WarehouseID
  String ItemName
  int Quantity
  long CapacityPerQty
  StorageStatus Status

  + getPercentageInWarehouse(double)
}

class Warehouse {
  Long ID
  String Name
  String Region
  String Address
  long MaxCapacity
  LocalDateTime CreatedAt

  + getItems()
  {static} getById(long)
}

class D_Warehouse {
  int ItemQuantity
  long CapacityUtilization
  double CapacityUtilizationRate
  LocalDateTime LatestAdditionAt

  + getUtilizationRate()
}

class Trip {
  Long ID
  long StaffID
  long DonationID
  String Address
  LocalDateTime ScheduleTime
  String StartLocation
  String EndDestination

  {static} getByStaff(long)
  {static} getByDonation(long)
  {static} getById(long)
}

class Staff {
  Long ID
  String FirstName
  String LastName
  String Department
  double Salary
  String Status
  LocalDate DateOfBirth
  String Gender
  String Address
  String Email
  String Phone
  LocalDateTime HiredAt
  LocalDateTime UpdatedAt

  {static} getById(long)
}

class Vehicle {
  Long ID
  String Name
  int TripsCarriedOut
  long CarriageCapacity
  LocalDateTime CreatedAt

  {static} getById(long)
}

class Donation_Request {
  Long ID
  long UserID
  String Title
  String Message
  String AccountNumber
  String BankName
  double CurrentAmount
  double GoalAmount
  String Status
  boolean Approved
  boolean Completed
  LocalDateTime CreatedAt
  LocalDateTime UpdatedAt

  + getUser()
  + hasUserUpvoted(long)
  {static} getById(long)
}

class D_Donation_Request {
  Long Upvotes
  String Address
  String Email
  String Phone
  String FirstName
  String LastName
}

class Fundraising {
  Long ID
  long DonorID
  double USD
  String Title
  String Message
  String Status
  LocalDateTime CreatedAt

  {static} getById(long)
}

class Notification {
  Long ID
  long UserID
  String Title
  String Message
  LocalDateTime CreatedAt
  boolean isRead

  {static} ofUser(long, int)
  {static} getById(long)
}

class Email_Verification {
  Long ID
  long UserID
  String Token
  String Type
  Long ExpiryDate

  + getUser()
  {static} getByToken(String)
  {static} ClearUnregisterUsers()
  {static} getById(long)
}

' =========================
' RELATIONSHIPS
' =========================
Donation_Request --> Bank
Donation_Item --> StorageStatus
Donation_Request "1" -- "*" Donation_Upvote
Donation --> DonationStatus

User "1" -- "*" Donation : donor
User "1" -- "*" Donation : receiver
User "1" -- "*" Fundraising
User "1" -- "*" Donation_Request
User "1" -- "*" Email_Verification
User "1" -- "*" Notification
User "1" -- "*" Donation_Upvote

Association "1" -- "*" Campaign

Donation "1" -- "*" Donation_Item
Donation "1" -- "0..1" Trip
Donation <|-- D_Donation
Donation_Request <|-- D_Donation_Request

Warehouse "1" o-- "*" Donation_Item
Warehouse <|-- D_Warehouse

Staff "1" -- "*" Trip
Vehicle "1" -- "*" Trip
@enduml
